[package]
name = "alltwitch-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.0"
tui = "0.16"
crossterm = "0.21"
twitch-irc = "3.0"
tokio = { version = "1.11", features = ["macros", "rt-multi-thread"] }
